--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <button class="header__btn"><a class="header__btn-link" href="#">Log in</a></button>
+      <button class="header__btn">Log in</button>
     </div>
   </header>
 
